<resources>
    <string name="app_name">Jan Jagruti</string>

    <!--General-->
    <string name="processing">Processing ..</string>
    <string name="okay">Okay</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_datetime">01, Jan 2019 00:00 (AM)</string>
    <string name="dummy_date">01, Jan 2019</string>
    <string name="dummy_time">00:00 (AM)</string>

    <!--Error & Confirmation-->
    <string name="session_expired">Session expired or authentication failed, please login again..</string>
    <string name="no_network">It seems that you are not connected to the internet</string>
    <string name="server_not_reachable">Server not reachable, please try again</string>
    <string name="refresh">Refresh</string>
    <string name="unauthorized">Unauthorized to access the specified resource</string>
    <string name="something_wrong">Something went wrong, please try again</string>
    <string name="something_wrong_funny">Oops, Something went wrong..</string>
    <string name="no_content">Not content found</string>
    <string name="not_found">The resource you\'r trying to find doesn\'t exists</string>
    <string name="material_type_not_supported">Material currently not supported, work in progress.</string>

    <!--Login & Registration-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_link_text">Already registerd? Login now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_link_text">Don\'t have an account? Register now</string>
    <string name="mobile_no">Mobile No</string>
    <string name="username">Username</string>

    <!--Forgot password-->
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_que">Forgot Password ?</string>
    <string name="send_mail">Send Mail</string>
    <string name="back">Back</string>

    <!--change password-->
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_change_success">Password changed successfully, please login again</string>

    <string name="empty_field_message">Field can\'t be empty</string>
    <string name="invalid_email_address">Enter a valid Email Address</string>
    <string name="invalid_mobile_no">Enter a valid 10 digit Mobile No</string>
    <string name="confirm_password_mismatch">Password Missmatch</string>

    <string name="invalid_credential">Invalid Credential</string>
    <string name="login_successful">Logged in successfully</string>
    <string name="registration_successful">Registration successful, you can login now.</string>

    <string name="logout">Log out</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>

    <!--Notice / Notification-->
    <string name="notice">Notice</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="posted_by">Posted By</string>
    <string name="posted_datetime">Posted date-time</string>
    <string name="created_datetime">Created date-time</string>

    <!--Subject-->
    <string name="subtitle">Subtitle</string>
    <string name="subject">Subject</string>

    <!--Material-->
    <string name="material">Material</string>
    <string name="launch">Launch</string>
    <string name="type">Type</string>

    <!--User profile-->
    <string name="user_profile">User Profile</string>

    <!--Package-->
    <string name="package_details">Package Details</string>
    <string name="packages">Packages</string>
    <string name="package_name">Package Name</string>
    <string name="enrollment">Enrollment</string>
    <string name="expiry">Expiry</string>
    <string name="no_premium_user_message">You are not a premium user, so you\'ll not be able to access all the content</string>
    <string name="go_premium">Upgrade to Premium Now</string>
    <string name="explore_packages">Explore Packages</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="dummy_ruppee">200.00</string>
    <string name="validity">Validity</string>
    <string name="rate_format" formatted="false">\u20B9 %.2f for %d %s</string>
    <string name="activate_now">Activate Now</string>
</resources>
