<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/space_little"
    android:layout_marginTop="@dimen/space_little"
    android:layout_marginRight="@dimen/space_little"
    android:layout_marginBottom="@dimen/space_very_little"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_little">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/img_materialLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtview_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_materialLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtview_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtview_title"
            app:layout_constraintTop_toBottomOf="@+id/txtview_title" />

        <TextView
            android:id="@+id/txtview_postedDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/posted_datetime"
            app:layout_constraintEnd_toStartOf="@+id/img_postedDateTime"
            app:layout_constraintTop_toBottomOf="@+id/txtview_subtitle" />

        <ImageView
            android:id="@+id/img_postedDateTime"
            android:layout_width="@dimen/width_small"
            android:layout_height="@dimen/height_small"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/posted_datetime"
            android:src="@drawable/ic_access_time_black"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/txtview_postedDateTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtview_postedDateTime" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>